@@ -1,5 +1,3 @@
 scala-learning
 ==============
-Run this command to setup for windows
-set SCRIPT_DIR=%~dp0
-java -Xms512M -Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=256M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
+Go to your intellij and use import project option and point to the clone directory
